--- a/pom.xml
+++ b/pom.xml
@@ -40,13 +40,14 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.7.1</version>
             </plugin>
         </plugins>
+        </pluginManagement>
     </build>
 
 </project>
